# tgintegration

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  biome.json  index.html  inline-test-session-shm  inline-test-session-wal  mkdocs.yml  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  sphinxpyistubs.py  tox.ini  travis_pypi_setup.py  ts-migration-plan.md  tsconfig.json  workflow-exploration.ts
.agent/: archive-guidelines.md  bun-guidelines.md  guidelines.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  docs.yml  post-release.yml  publish.yml  test-telegram-notifications.yml
_TODO/: index.html
api-mkapi/: index.html
api-mkdocstrings/: index.html
api/source/tgintegration.botcontroller/: index.html
api/source/tgintegration.collector/: index.html
api/source/tgintegration.containers.inline_keyboard/: index.html
api/source/tgintegration.containers.reply_keyboard/: index.html
api/tgintegration/: index.html
api/tgintegration.botcontroller/: index.html
api/tgintegration.collector/: index.html
api/tgintegration.containers/: index.html
api/tgintegration.containers.inline_keyboard/: index.html
api/tgintegration.containers.reply_keyboard/: index.html
api/tgintegration.containers.responses/: index.html
api/tgintegration.expectation/: index.html
archive/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg
archive/.github/: ISSUE_TEMPLATE.md
archive/.run/: pytest in tests.run.xml
archive/docs/: .gitignore  _TODO.md  api-mkapi.md  api-mkdocstrings.md  extra_templates.yml  getting-started.md  installation.md  prerequisites.md
archive/examples/: playground.py
archive/scripts/: copy_readme.py  create_session_strings.py
archive/tests/: conftest.py
archive/tgintegration/: __init__.py  botcontroller.py  expectation.py  handler_utils.py  timeout_settings.py
assets/: github-social-logo.xcf
cicd/: generate_configini_from_gh_secrets.py
contributing/: index.html
docs/: .gitignore  Makefile  _HOWTO.md  _TODO.md  api.md  conf.py  configuration.md  index.md  index.rst  installation.md  installation.rst  introduction.md  make.bat  modules.rst  prerequisites.md  setup.md  sphinxpyistubs.py  tgintegration.containers.rst  tgintegration.rst  usage.rst
docs/api/: tgintegration.botcontroller.md  tgintegration.containers.md  tgintegration.md
docs/styles/: mkapi-overrides.css  mkdocstrings-overrides.css
examples/: README.md  config_template.ini  crafter-ai-bot.ts  crafter-ai-complete-demo.ts  crafter-ai-demo.ts  crafter-ai-interesting-workflow.ts  idletown.py  like-bot.ts  package.json  playground.py  playground.ts  readme-example.ts  readmeexample.py  utils.ts
examples/async/: basic.py
examples/automation/: bot-explorer-like.ts  dinoparkbot.py  echo.ts  idletown.py  inline-query.ts  like-bot.ts  my_account.session-journal
examples/bun-test/: README.md  inline-queries.test.ts  like-bot.test.ts  package.json
examples/panda-quiz-bot/: README.md  index.ts  package.json
examples/pytest/: conftest.py  test_basic.py  test_commands.py  test_explore.py  test_inlinequeries.py
examples/readme/: readme-example.ts
examples/readme_example/: readmeexample.py
getting-started/: index.html
installation/: index.html
prerequisites/: index.html
scripts/: create_session_strings.py  make_stub_files.py  makestubs.sh  open_browser.py  setup.cfg
search/: search_index.json
setup/: index.html
tests/: __init__.py  config.ini  config_template.ini  conftest.py  run_examples.py  test_examples.py  test_expectation.py  test_handler_utils.py  test_interactionclient.py  test_v2.py  testbot.py
tests/integration/: conftest.py  test_examples.py
tests/unit/: test_handler_utils.py
tgintegration/: __init__.py  _handler_utils.py  awaitableaction.py  awaitableaction.pyi  botcontroller.py  botintegrationclient.py  botintegrationclient.pyi  collector.py  dialogs.py  handler_utils.py  integrationtestclient.py  integrationtestclient.pyi  interactionclient.py  interactionclient.pyi  interactionclientasync.py  interactionclientasync.pyi  response.py  response.pyi  responsecollectorclient.py  update_recorder.py
tgintegration/containers/: __init__.py  exceptions.py  inline_keyboard.py  inline_results.py  inlineresults.py  inlineresults.pyi  keyboard.py  keyboard.pyi  reply_keyboard.py  response.py  response.pyi  responses.py
tgintegration/utils/: format_utils.py  iter_utils.py  sentinel.py
tutorials/testing/: index.html
(+34 files in other folders)
