[tool.poetry]
name = "tgintegration"
packages = [
    { include = "tgintegration" }
]
include = ["LICENSE"]
version = "1.1.0"
description = "Integration test and automation library for Telegram Messenger Bots based on Pyrogram."
authors = ["JosXa <joscha.goetzer@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JosXa/tgintegration"
keywords = ["telegram-bots", "testing", "integration-tests", "library", "python"]
classifiers = [
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/JosXa/tgintegration/issues"
"Support Chat" = "https://t.me/TgIntegration"
"Contact Author" = "https:/t.me/JosXa"

[tool.poetry.dependencies]
python = "==3.*,>=3.7"
typing-extensions = "^3.7.4"
pyrogram = "^1.0.0"

[tool.poetry.dev-dependencies]
bumpversion = "==0.5.3"
coverage = "*"
tgcrypto = "==1.*,>=1.2.0"
python-decouple = "^3.3"
pytest = "*"
pytest-runner = "*"
pytest-asyncio = "*"
pytest-cov = "^2.10.1"
mkdocs-material = { version = "^6.0.2", python = "^3.7" }
mkapi = { version = "^1.0.13", python = "^3.7" }
poethepoet = "^0.9.0"
mkdocstrings = "^0.13.6"
mkdocs-toc-sidebar-plugin = "^0.1.0"
pypandoc = "^1.5"
panflute = "^1.12.5"
markdown-include = "^0.6.0"
mkdocs-markdownextradata-plugin = "^0.1.7"
autoflake = "^1.4"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
# Usage: `pip install poe`, then `poe [task]`
test = "pytest"
pre-stage-config = "git stage .pre-commit-config.yaml"
pre-install = "pre-commit install"
pre-commit = "pre-commit run --all-files"
pre = ["pre-stage-config", "pre-commit"]
pre-with-install = ["pre-stage-config", "pre-install", "pre-commit"]
docs-build = "mkdocs build"
docs-serve = "mkdocs serve"
docs-open = { script = "scripts.open_browser:open_docs" }
docs = ["docs-serve"]
